histogramCE: All parts of the index require a histogram, even if not used

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Optimization
    • Fully Compatible
    • ALL
    • Hide

      See body of ticket.

      Show
      See body of ticket.
    • QO 2025-01-20, QO 2025-02-03
    • 200
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      Enterprise test> db.foo.createIndex({a:1, b:1});
      a_1_b_1
      # We query on a, get an error on b
      Enterprise test> db.foo.find({"a":99999999})
      MongoServerError[HistogramCEFailure]: no histogram found for path: b 

      In this case, we are not querying on b and yet a histogram is required.

            Assignee:
            Ben Shteinfeld
            Reporter:
            Philip Stoev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: