SERVER-99096 Allow histogram estimation in cases when only prefix of index is used and unbounded suffix does not have histograms (#31384)

GitOrigin-RevId: 2ea26376a6f2e266346ba5d45598314d8c9bf8dd